tdf#91944 Fix inc/dec indent buttons in impress

Regression from ed6b7d972bf1aee323947f22c6b5de430db4a9a5.
These buttons are implemented inside the sidebar, so just
changing command names in the ui file won't work.
Also, following the decision to use indent buttons across all
modules, there is no need for 2 separate toolboxes anymore.

Change-Id: Id9af0cd10fd0517be86b9793c187cd6508029732
Reviewed-on: https://gerrit.libreoffice.org/16199
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
Tested-by: Maxim Monastirsky <momonasmon@gmail.com>